--- a/src/SelfieCapture.css
+++ b/src/SelfieCapture.css
@@ -9,7 +9,9 @@
       overflow: auto;
     }
     .selfie-img {
-      height: 200px;
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
     }
     .selfie_canvas {
       position: absolute;
