--- a/src/SelfieCapture.css
+++ b/src/SelfieCapture.css
@@ -17,6 +17,7 @@
       position: absolute;
       height: 100%;
       width: 100%;
+      transform: scale(-1, 1);
     }
     #selfie-video {
       object-fit: cover;
