--- a/src/SelfieCapture.css
+++ b/src/SelfieCapture.css
@@ -9,7 +9,7 @@
       overflow: auto;
     }
     .selfie-img {
-      width: 80%;
+      width: 60%;
       margin-left: auto;
       margin-right: auto;
     }
@@ -19,13 +19,14 @@
       width: 100%;
       transform: scale(-1, 1);
     }
-    #selfie-video {
+    #selfie-video, .selfie-oval {
       object-fit: cover;
       transform: scale(-1, 1);
     }
     img.selfie-oval {
       position: absolute;
       object-fit: contain;
+      opacity: 0.5;
     }
     div#hint-message {
       position:absolute;
@@ -49,3 +50,4 @@
     padding-left: 10vw;
     padding-right: 10vw;
   }
+  
